Refactor: Restructured project to use src folder, fixed onboarding flow, and updated i18n providers

--- a/Key-Frontend/src/i18n/messages/en-US/onboarding.json
+++ b/Key-Frontend/src/i18n/messages/en-US/onboarding.json
@@ -16,6 +16,8 @@
     "otp-label": "Enter Verification Code",
     "otp-error": "Please enter the complete 6-digit code",
     "verification-failed": "Verification failed. Please try again.",
+    "lockout-error": "Too many attempts. Please try again in 15 minutes.",
+    "lockout-timer": "Unlock in: {timer}",
     "resend-link": "Resend code",
     "resend-countdown": "Resend code in {seconds} seconds",
     "next-button": "Next →",
